Crash on some wav samples with OpenSL aout
See samples attached and log below.
05-07 13:17:54.918: V/VLC/AudioService(4479): Loading position 0 in [file:///mnt/sdcard/-%20VLC%20Sample%20-/Music/mbeernut.wav, file:///mnt/sdcard/-%20VLC%20Sample%20-/Music/mburger.wav, file:///mnt/sdcard/-%20VLC%20Sample%20-/Music/mchocola.wav, file:///mnt/sdcard/-%20VLC%20Sample%20-/Recital_24bit.flac]
05-07 13:17:54.928: V/VLC/LibVLC(4479): Reading file:///mnt/sdcard/-%20VLC%20Sample%20-/Music/mbeernut.wav
05-07 13:17:54.928: D/VLC(4479): [0x8eeb7f4]: main input Creating an input for 'mbeernut.wav'
05-07 13:17:54.928: D/VLC(4479): [0x8eeb7f4]: main input using timeshift granularity of 50 MiB, in path '/tmp'
05-07 13:17:54.928: D/VLC(4479): [0x8eeb7f4]: main input `file:///mnt/sdcard/-%20VLC%20Sample%20-/Music/mbeernut.wav' gives access `file' demux `' path `/mnt/sdcard/-%20VLC%20Sample%20-/Music/mbeernut.wav'
05-07 13:17:54.928: D/VLC(4479): [0x8eeb7f4]: main input creating demux: access='file' demux='' location='/mnt/sdcard/-%20VLC%20Sample%20-/Music/mbeernut.wav' file='/mnt/sdcard/- VLC Sample -/Music/mbeernut.wav'
05-07 13:17:54.928: D/VLC(4479): [0x8eeee04]: main demux looking for access_demux module matching "file": 4 candidates
05-07 13:17:54.928: D/VLC(4479): [0x8eeee04]: main demux no access_demux modules matched
05-07 13:17:54.928: D/VLC(4479): [0x8eeb7f4]: main input creating access 'file' location='/mnt/sdcard/-%20VLC%20Sample%20-/Music/mbeernut.wav', path='/mnt/sdcard/- VLC Sample -/Music/mbeernut.wav'
05-07 13:17:54.928: D/VLC(4479): [0x8eeed74]: main access looking for access module matching "file": 13 candidates
05-07 13:17:54.938: D/VLC(4479): [0x8eeed74]: filesystem access opening file `/mnt/sdcard/- VLC Sample -/Music/mbeernut.wav'
05-07 13:17:54.938: D/VLC(4479): [0x8eeed74]: main access using access module "filesystem"
05-07 13:17:54.938: D/VLC(4479): [0x8eef154]: main stream Using stream method for AStream*
07 13:17:54.938: I/AudioService(211): Remote Control registerMediaButtonIntent() for PendingIntent{218765c8: PendingIntentRecord{217f12a8 Key{broadcastIntent pkg=org.videolan.vlc.betav7neon intent=act=android.intent.action.MEDIA_BUTTON cmp=org.videolan.vlc.betav7neon/.RemoteControlClientReceiver flags=0x0}}}
05-07 13:17:54.938: D/VLC(4479): [0x8eef154]: main stream starting pre-buffering
05-07 13:17:54.938: D/VLC(4479): [0x8eef154]: main stream received first data after 0 ms
05-07 13:17:54.938: D/VLC(4479): [0x8eef154]: main stream pre-buffering done 1024 bytes in 0s - 2717 KiB/s
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: main stream looking for stream_filter module matching "any": 9 candidates
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: main stream no stream_filter modules matched
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: main stream looking for stream_filter module matching "stream_filter_record": 9 candidates
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: main stream no stream_filter modules matched
05-07 13:17:54.938: D/VLC(4479): [0x8eeb7f4]: main input creating demux: access='file' demux='' location='/mnt/sdcard/-%20VLC%20Sample%20-/Music/mbeernut.wav' file='/mnt/sdcard/- VLC Sample -/Music/mbeernut.wav'
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: main demux looking for demux module matching "any": 54 candidates
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: wav demux chunk: fcc=fmt
size=16
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: wav demux format: 0x0001, fourcc: araw, channels: 1, freq: 11127 Hz, bitrate: 10Ko/s, blockalign: 1, bits/samples: 8, extra size: 0
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: wav demux found Raw audio audio format
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: wav demux chunk: fcc=INFO
size=22
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: wav demux chunk: fcc=data
size=19324
05-07 13:17:54.938: D/VLC(4479): [0x8eeb7f4]: main input selecting program id=0
05-07 13:17:54.938: D/VLC(4479): [0x8eef1e4]: main demux using demux module "wav"
05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input looking for a subtitle file in /mnt/sdcard/- VLC Sample -/Music/
05-07 13:17:54.948: D/VLC(4479): [0x8eefd64]: main decoder looking for decoder module matching "any": 31 candidates
05-07 13:17:54.948: D/VLC(4479): [0x8eefd64]: araw decoder samplerate:11127Hz channels:1 bits/sample:8
05-07 13:17:54.948: D/VLC(4479): [0x8eefd64]: main decoder using decoder module "araw"
05-07 13:17:54.948: D/VLC(4479): [0x8ef0584]: main demux meta looking for meta reader module matching "any": 1 candidates
05-07 13:17:54.948: D/VLC(4479): [0x8ef0584]: main demux meta no meta reader modules matched
05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input file:///mnt/sdcard/-%20VLC%20Sample%20-/Music/mbeernut.wav' successfully opened 05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input Buffering 0% 05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input Buffering 16% 05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input Buffering 33% 05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input Buffering 49% 05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input Buffering 66% 05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input Buffering 83% 05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input Buffering 99% 05-07 13:17:54.948: D/VLC(4479): [0x8eeb7f4]: main input Stream buffering done (349 ms in 1 ms) 05-07 13:17:54.948: D/VLC(4479): [0x8ede274]: main generic creating audio output 05-07 13:17:54.948: D/VLC(4479): [0x8ef05a4]: main audio output looking for audio output module matching "opensles": 4 candidates 05-07 13:17:54.958: E/(4479): Open libmovextractor.so failed when register 05-07 13:17:54.958: W/libOpenSLES(4479): class OutputMix interface 0 requested but unavailable MPH=43 05-07 13:17:54.958: D/VLC(4479): [0x8ef05a4]: main audio output using audio output module "opensles_android" 05-07 13:17:54.958: E/libOpenSLES(4479): pAudioSrc: samplesPerSec=11127000 05-07 13:17:54.958: W/libOpenSLES(4479): Leaving Engine::CreateAudioPlayer (SL_RESULT_CONTENT_UNSUPPORTED) 05-07 13:17:54.958: E/VLC(4479): [0x8ef05a4]: opensles_android audio output Failed to create audio player (9) 05-07 13:17:54.958: E/VLC(4479): [0x8ef05a4]: main audio output module not functional 05-07 13:17:54.958: D/VLC(4479): [0x8ede274]: main generic keeping audio output 05-07 13:17:54.958: E/VLC(4479): [0x8eefd64]: main decoder failed to create audio output 05-07 13:17:54.958: D/VLC(4479): [0x8eeb7f4]: main input Decoder buffering done in 9 ms 05-07 13:17:54.968: D/VLC/AudioService(4479): Updating widget 05-07 13:17:55.058: E/VLC/AudioService(4479): Event not handled 05-07 13:17:55.058: I/VLC/AudioService(4479): MediaPlayerPlaying 05-07 13:17:55.148: D/dalvikvm(211): GC_EXPLICIT freed 3678K, 36% free 26509K/41159K, paused 3ms+5ms 05-07 13:17:55.148: I/AudioService(211): AudioFocus requestAudioFocus() from android.media.AudioManager@21323ad0org.videolan.vlc.betav7neon.AudioService$1@21323ac8 05-07 13:17:55.168: V/VLC/AudioPlayerActivity(4479): width = 600 : height = 1024 05-07 13:17:55.228: D/VLC/AudioService(4479): Updating widget 05-07 13:17:55.238: D/VLC/AudioServiceContoller(4479): Service Connected 05-07 13:17:55.298: D/dalvikvm(4479): GC_FOR_ALLOC freed 1070K, 12% free 13523K/15239K, paused 9ms 05-07 13:17:55.438: I/ActivityManager(211): Displayed org.videolan.vlc.betav7neon/.gui.audio.AudioPlayerActivity: +278ms 05-07 13:17:55.868: E/WifiStateMachine(211): set suspend optimizations failed! 05-07 13:17:56.278: D/VLC(4479): [0x8eeb7f4]: main input EOF reached 05-07 13:17:56.278: D/VLC(4479): [0x8eeb7f4]: main input waiting decoder fifos to empty 05-07 13:17:56.378: D/VLC(4479): [0x8eefd64]: main decoder removing module "araw" 05-07 13:17:56.378: D/VLC(4479): [0x8eefd64]: main decoder killing decoder fourcc
u8 ', 0 PES in FIFO
05-07 13:17:56.378: D/VLC(4479): [0x8eef1e4]: main demux removing module "wav"
05-07 13:17:56.378: D/VLC(4479): [0x8eeed74]: main access removing module "filesystem"
05-07 13:17:56.378: D/VLC(4479): [0x8eeb7f4]: main input Program doesn't contain anymore ES
05-07 13:17:56.378: I/VLC/AudioService(4479): MediaPlayerEndReached
05-07 13:17:56.418: D/dalvikvm(4479): GC_FOR_ALLOC freed 1168K, 15% free 14988K/17607K, paused 13ms
05-07 13:17:56.428: D/VLC/AudioService(4479): Updating widget
05-07 13:17:56.428: V/VLC/LibVLC(4479): Reading file:///mnt/sdcard/-%20VLC%20Sample%20-/Music/mburger.wav
05-07 13:17:56.438: D/VLC(4479): [0x8ef05a4]: main audio output removing module "opensles_android"
05-07 13:17:56.438: A/libc(4479): Fatal signal 11 (SIGSEGV) at 0x32313149 (code=1)
05-07 13:17:56.738: I/DEBUG(115): *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***
05-07 13:17:56.738: I/DEBUG(115): Build fingerprint: 'orange/AZ210B/noonhill:4.0.4/AZ210B_ICS_02.27I/1016.163817:user/release-keys'
05-07 13:17:56.738: I/DEBUG(115): pid: 4479, tid: 4479 >>> org.videolan.vlc.betav7neon <<<
05-07 13:17:56.738: I/DEBUG(115): signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 32313149
05-07 13:17:56.738: I/DEBUG(115): eax 32313131 ebx 5e69dff4 ecx 08ef2490 edx 08ef05a4
05-07 13:17:56.738: I/DEBUG(115): esi 08ef1ee0 edi 08ef05a4
05-07 13:17:56.738: I/DEBUG(115): xcs 00000073 xds 0000007b xes 0000007b xfs 00000000 xss 0000007b
05-07 13:17:56.738: I/DEBUG(115): eip 5db086e2 ebp 5db549e0 esp bf975690 flags 00010206
05-07 13:17:56.958: I/DEBUG(115): #00 eip: 003226e2 /data/data/org.videolan.vlc.betav7neon/lib/libvlcjni.so
05-07 13:17:56.958: I/DEBUG(115): #01 eip: c381ffd9
05-07 13:17:56.958: I/DEBUG(115): #02 eip: ffffffff
05-07 13:17:56.968: I/DEBUG(115): #03 eip: ffffffff
05-07 13:17:56.968: I/DEBUG(115): #04 eip: ffffffff
05-07 13:17:56.968: I/DEBUG(115): #05 eip: ffffffff
05-07 13:17:56.968: I/DEBUG(115): #06 eip: ffffffff
05-07 13:17:56.968: I/DEBUG(115): #07 eip: ffffffff
05-07 13:17:56.968: I/DEBUG(115): stack:
05-07 13:17:56.968: I/DEBUG(115): #01 5db549e4 c381ffd9
05-07 13:17:56.968: I/DEBUG(115): #01 5db549e8 00b4960e
05-07 13:17:56.968: I/DEBUG(115): #01 5db549ec e824648d
05-07 13:17:56.968: I/DEBUG(115): #01 5db549f0 3024448b
05-07 13:17:56.968: I/DEBUG(115): #01 5db549f4 3424548b
05-07 13:17:56.968: I/DEBUG(115): #01 5db549f8 08244489
05-07 13:17:56.968: I/DEBUG(115): #01 5db549fc 24244c8b
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a00 3824448b
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a04 0c245489
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a08 04244c89
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a0c e8240489
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a10 0002040c
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a14 1824648d
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a18 b68dc35b
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a1c 00000000
05-07 13:17:56.968: I/DEBUG(115): #01 5db54a20 dc4be853
05-07 13:17:56.968: I/DEBUG(115): ...... ......
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be857 ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be85b ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be85f ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be863 ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be867 ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be86b ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be86f ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be873 ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be877 ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be87b ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be87f ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be883 ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be887 ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be88b ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be88f ffffffff
05-07 13:17:56.968: I/DEBUG(115): #02 dc8be893 ffffffff
05-07 13:17:56.968: I/DEBUG(115): ...... ......
05-07 13:17:59.528: E/ia_watchdog(110): Timer interrupt
05-07 13:17:59.528: E/ia_watchdog(110): waiting for a timer interrupt
05-07 13:17:59.878: D/dalvikvm(296): GC_CONCURRENT freed 3829K, 32% free 11903K/17415K, paused 2ms+4ms
05-07 13:18:00.048: I/BootReceiver(211): Copying /data/tombstones/tombstone_00 to DropBox (SYSTEM_TOMBSTONE)
05-07 13:18:00.078: W/AudioService(211): RemoteControlClient died
05-07 13:18:00.078: W/AudioService(211): AudioFocus audio focus client died
05-07 13:18:00.078: I/AudioService(211): AudioFocus abandonAudioFocus(): removing entry for android.media.AudioManager@21323ad0org.videolan.vlc.betav7neon.AudioService$1@21323ac8
05-07 13:18:00.078: I/WindowManager(211): WIN DEATH: Window{21517998 org.videolan.vlc.betav7neon/org.videolan.vlc.betav7neon.gui.MainActivity paused=false}
05-07 13:18:00.078: I/ActivityManager(211): Process org.videolan.vlc.betav7neon (pid 4479) has died.
05-07 13:18:00.078: W/ActivityManager(211): Scheduling restart of crashed service org.videolan.vlc.betav7neon/.AudioService in 5000ms
05-07 13:18:00.078: W/ActivityManager(211): Force removing ActivityRecord{2113d900 org.videolan.vlc.betav7neon/.gui.audio.AudioPlayerActivity}: app died, no saved state
05-07 13:18:00.078: I/WindowManager(211): WIN DEATH: Window{21160fb8 org.videolan.vlc.betav7neon/org.videolan.vlc.betav7neon.gui.audio.AudioPlayerActivity paused=false}
05-07 13:18:00.088: D/dalvikvm(4568): Late-enabling CheckJNI
05-07 13:18:00.088: D/dalvikvm(4568): Try to disable coredump for pid 4568
05-07 13:18:00.088: E/dalvikvm(4568): could not disable core file generation for pid 4568: Operation not permitted
05-07 13:18:00.088: I/ActivityManager(211): Start proc org.videolan.vlc.betav7neon for activity org.videolan.vlc.betav7neon/.gui.MainActivity: pid=4568 uid=10079 gids={3003, 1007, 1023, 1015}
05-07 13:18:00.108: D/dalvikvm(4568): Debugger has detached; object registry had 1 entries
05-07 13:18:00.138: D/Zygote(116): Process 4479 terminated by signal (11)
05-07 13:18:00.138: I/Zygote(116): Process 4479 dumped core
05-07 13:18:00.158: D/Posix(4568): Searching package installed with ABI2 with Uid: 10079
05-07 13:18:00.158: D/Posix(4568): Application is pure Java or contains primary ABI library
05-07 13:18:00.158: D/dalvikvm(4568): Trying to load lib /data/data/org.videolan.vlc.betav7neon/lib/libiomx-ics.so 0x42258a70
05-07 13:18:00.168: D/dalvikvm(4568): Added shared lib /data/data/org.videolan.vlc.betav7neon/lib/libiomx-ics.so[Native] 0x42258a70
05-07 13:18:00.168: D/dalvikvm(4568): No JNI_OnLoad found in /data/data/org.videolan.vlc.betav7neon/lib/libiomx-ics.so 0x42258a70, skipping init
05-07 13:18:00.168: D/dalvikvm(4568): Trying to load lib /data/data/org.videolan.vlc.betav7neon/lib/libvlcjni.so 0x42258a70
05-07 13:18:00.178: D/dalvikvm(4568): Added shared lib /data/data/org.videolan.vlc.betav7neon/lib/libvlcjni.so[Native] 0x42258a70
05-07 13:18:00.178: V/VLC/LibVLC(4568): Initializing LibVLC
05-07 13:18:00.178: D/Posix(4568): Searching package installed with ABI2 with Uid: 10079
05-07 13:18:00.178: D/Posix(4568): Application is pure Java or contains primary ABI library
05-07 13:18:00.188: D/VLC(4568): [0x8ca3494]: main libvlc VLC media player - 2.1.0-git Rincewind
05-07 13:18:00.188: D/VLC(4568): [0x8ca3494]: main libvlc Copyright © 1996-2013 the VideoLAN team
05-07 13:18:00.188: D/VLC(4568): [0x8ca3494]: main libvlc revision 1.3.0-git-5844-ge3d6ee99
05-07 13:18:00.188: D/VLC(4568): [0x8ca3494]: main libvlc configured with ../configure '--host=i686-linux-android' '--build=x86_64-unknown-linux' '--enable-live555' '--enable-realrtsp' '--enable-avformat' '--enable-swscale' '--enable-avcodec' '--enable-opus' '--enable-opensles' '--enable-android-surface' '--enable-mkv' '--enable-taglib' '--enable-dvbpsi' '--disable-vlc' '--disable-shared' '--disable-update-check' '--disable-vlm' '--disable-dbus' '--disable-lua' '--disable-vcd' '--disable-v4l2' '--disable-gnomevfs' '--disable-dvdread' '--disable-dvdnav' '--disable-bluray' '--disable-linsys' '--disable-decklink' '--disable-libva' '--disable-dv1394' '--disable-mod' '--disable-sid' '--disable-gme' '--disable-tremor' '--disable-mad' '--disable-dca' '--disable-sdl-image' '--disable-zvbi' '--disable-fluidsynth' '--disable-jack' '--disable-pulse' '--disable-alsa' '--disable-samplerate' '--disable-sdl' '--disable-xcb' '--disable-atmo' '--disable-qt' '--disable-skins2' '--disable-mtp' '--disable-notify' '--enable-libass' '--disable-svg' '--disable-s
05-07 13:18:00.188: D/VLC(4568): [0x8ca3494]: main libvlc plug-ins loaded: 212 modules
05-07 13:18:00.198: D/VLC(4568): [0x8ca3494]: main libvlc translation test: code is "C"
05-07 13:18:00.198: D/VLC(4568): [0x8ca3494]: main libvlc CPU has capabilities MMX MMXEXT SSE SSE2 SSE3 SSSE3 FPU
05-07 13:18:00.198: I/VLC/JNI/main(4568): LibVLC initialized: 0x8c950d0
}}}