opensles: do not set volume if aout start failed

Close: #8579